resolved the app image alignment issue

--- a/src/styles/layout/_app-look.scss
+++ b/src/styles/layout/_app-look.scss
@@ -34,13 +34,13 @@
       position: absolute;
       top: 0;
       right: 0px;
-      transform: translate(20%, -5px) rotateZ(10deg);
+      transform: translate(-20%, 5px) rotateZ(-10deg);
     }
     & .app-look-map {
       position: absolute;
       top: 0;
       right: 0px;
-      transform: translate(-20%, -5px) rotateZ(-10deg);
+      transform: translate(20%, 5px) rotateZ(10deg);
     }
   }
 
